@@ -67,6 +67,7 @@ Changes in current version:
  o Correctly handle timeouts larger than 35 minutes on Linux with epoll.c.  This is probably a kernel defect, but we'll have to support old kernels anyway even if it gets fixed.
  o Make name_from_addr() threadsafe in http.c
  o Add new thread-safe interfaces to evdns functions.
+ o Make all event_tagging interfaces threadsafe.
 
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
